refactor: clean code - standardize ResponseEntity types, Javadoc, JPQL fix